# api-security-demo

./: .gitignore  .pre-commit-config.yaml  README.md  cdk.json  package-lock.json  package.json
doc/: Architecture.drawio  TeamChallenge-UseCase.drawio
lib/: api-security-stack.ts  pipeline-stage.ts
lib/app/: app-stack.ts  cognito.ts
resources/: pyproject.toml
resources/lambdas/get_order/: main.py
resources/lambdas/get_service_stats/: main.py
resources/lambdas/get_shop/: main.py
resources/lambdas/get_shop_sales/: main.py
resources/lambdas/helpers_layer/: pyproject.toml
resources/lambdas/helpers_layer/api_helpers/: __init__.py
resources/lambdas/helpers_layer/cognito_helpers/: __init__.py
resources/lambdas/helpers_layer/dynamodb_helpers/: __init__.py
resources/lambdas/helpers_layer/log_helpers/: __init__.py
resources/lambdas/list_products/: main.py
resources/lambdas/list_shop_orders/: main.py
resources/lambdas/migrations/ensure_shop_token/: index.py
resources/lambdas/place_order/: main.py
resources/lambdas/prefill_table_with_testdata/: main.py
resources/lambdas/regenerate_shop_token/: main.py
resources/lambdas/set_test_users_password/: main.py
resources/openapi/: api-definition.yaml
resources/tests/: conftest.py  test_cognito_helpers.py  test_get_order.py  test_get_service_stats.py  test_get_shop.py  test_get_shop_sales.py  test_list_products.py  test_list_shop_orders.py  test_place_order.py  test_regenerate_shop_token.py
